# stylint

./: README.md  check_style.py  deferred-long-sentences.md  formatting.md  polish.md  pyproject.toml  voice.md
.tmp/: noun-smell-reviewed.json
stylint/: __init__.py  cli.py  explanations.py  lint.py  nlp.py  patterns.py  styleguide.py  tags.py  text.py
stylint/rules/: banned.py  markdown.py  prose.py
stylint/style_guide/: __init__.py  agents.md  code-style.md  formatting.md  polish.md  prompt-abstract-subject.md  prompt-noun-phrase-smell.md  voice.md
tests/: conftest.py  test_check_style.py  test_cli.py  test_nlp.py  test_stylint_package.py
tools/: README.md  noun_smell_merge_reviews.py  noun_smell_review_app.py  noun_smell_scan.py
