[project]
name = "stylint"
dynamic = ["version"]
description = "A markdown style linter for technical writing - flags bold/italic, em dashes, banned phrases, long sentences, label-colon openers, and more."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Alexey Grigorev" }]
license = "MIT"
keywords = ["markdown", "lint", "style", "prose", "writing"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Text Processing :: Linguistic",
]

[project.optional-dependencies]
# Heavier NLP-based checks (passive voice, ...), enabled with --nlp.
# Kept out of the base install so default runs stay light and fast.
nlp = ["nltk>=3.8"]

[project.urls]
Homepage = "https://github.com/alexeygrigorev/stylint"
Repository = "https://github.com/alexeygrigorev/stylint"

[project.scripts]
stylint = "stylint.cli:main"
prose-style-lint = "stylint.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["stylint*"]

[tool.setuptools]
py-modules = ["check_style", "version"]

[tool.setuptools.package-data]
"stylint.style_guide" = ["*.md"]

[tool.setuptools.dynamic]
version = { attr = "stylint.__version__" }

[dependency-groups]
dev = [
    "hatch>=1.16.5",
    "nltk>=3.9.4",
    "pytest>=9.0.3",
]
